<resources>
    <string name="app_name">EBT Compass</string>
    <string name="meters">meters</string>
    <string name="feet">feet</string>
    <string name="select_existing_point_name">(Select)</string>
    <string name="select_line_to_point_name">(None)</string>
    <string name="my_location">This is my location</string>
    <string name="share_via">Share via</string>
    <string name="keep_going">Keep Going</string>
    <string name="title_activity_line">Go in a Line</string>
    <string name="title_activity_point">Go to Lat/Long</string>
    <string name="title_activity_save_point">Save Point</string>
    <string name="title_activity_update_point">Update Point</string>
    <string name="title_activity_points">Points</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_license_terms">License Terms</string>
    <string name="web_url">https://www.ericbt.com/ebt_compass</string>
    <string name="web_url_text">Website</string>
    <string name="saved_points_will_appear">Saved points will appear here.</string>
    <string name="overwrite_point">Overwrite Point?</string>
    <string name="view_on_map">View Points on Map</string>
    <string name="point_exists_question">There already is a point named \"%s\". Overwrite?</string>
    <string name="delete_point">Delete</string>
    <string name="delete_point_question">Delete point \"%s\""?</string>
    <string name="points">Points</string>
    <string name="latitude_zone_heading">Latitude Zone:</string>
    <string name="longitude_zone_heading">Longitude Zone:</string>
    <string name="accuracy_url">https://www.ericbt.com/ebt_compass#accuracy</string>
    <string name="line_activity_hint">Specify a heading and press \"GO\". Then start moving along that heading.\n\nWhen you drift off course, EBT Compass will help you get back on track, by speaking or vibrating:\n\none vibration: turn right\ntwo vibrations: turn left\n\nPress \"CLEAR\" to stop vibrations.</string>
    <string name="help_url">https://www.ericbt.com/ebt_compass</string>
    <string name="ok">OK</string>
    <string name="battery">Battery</string>
    <string name="stop_compass_to_conserve_battery">Stop compass to conserve battery</string>
    <string name="speak_left">left</string>
    <string name="speak_right">right</string>
    <string name="permissions">Permissions</string>
    <string name="permissions_not_granted">Some permissions were not granted.\n\nEBT Compass will not function correctly until all permissions are granted.\n\nPermissions are necessary to sample location data.\n\nClick \"Request Permissions\" to grant permissions.</string>
    <string name="game_over">EBT Compass will not function correctly without all permissions.</string>
    <string name="sensors_header">Sensors</string>
    <string name="sensor_update_frequency_title">Magnetometer &amp; Gyro Updates</string>
    <string name="gps_update_frequency_title">GPS Updates</string>
    <string name="notification_frequency_title">Frequency</string>
    <string-array name="latitude_direction">
        <item>N</item>
        <item>S</item>
    </string-array>
    <string-array name="longitude_direction">
        <item>W</item>
        <item>E</item>
    </string-array>
    <string-array name="heading_direction">
        <item>Select</item>
        <item>N</item>
        <item>NNE</item>
        <item>NE</item>
        <item>ENE</item>
        <item>E</item>
        <item>ESE</item>
        <item>SE</item>
        <item>SSE</item>
        <item>S</item>
        <item>SSW</item>
        <item>SW</item>
        <item>WSW</item>
        <item>W</item>
        <item>WNW</item>
        <item>NW</item>
        <item>NNW</item>
    </string-array>
    <string name="you_have_arrived">You have arrived!</string>
    <string name="course_correction_notification_header">Course-Correction Notifications</string>
    <string name="notification_title">Mechanism</string>
    <string name="units_coordinate_systems_header">Units / Coordinate Systems</string>
    <string name="distance_units_title">Metric or English units</string>
    <string name="angle_units_title">Latitude / Longitude or UTM</string>
    <string name="arrival_notification_header">Arrival Notifications</string>
    <string name="points_menu_find_with_compass">Find with Compass</string>
    <string name="points_menu_view_on_map">View on Map</string>
    <string name="points_menu_update">Update</string>
    <string name="points_menu_delete">Delete</string>
    <string name="points_menu_delete_all">Delete All</string>
    <string name="name_label">Name:</string>
    <string name="name_of_point_required">Name of point - required</string>
    <string name="existing_name_label">Existing Name:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="degree_symbol">°</string>
    <string name="longitude_label">Longitude:</string>
    <string name="minutes_symbol">\'</string>
    <string name="seconds_symbol">\"</string>
    <string name="easting_label">Easting:</string>
    <string name="northing_label">Northing:</string>
    <string name="altitude_label">Altitude:</string>
    <string name="color_label">Color:</string>
    <string name="draw_line_to_label">Draw Line to:</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
    <string name="current_location_label">Current Location:</string>
    <string name="destination_label">Destination:</string>
    <string name="route_label">Route:</string>
    <string name="towards_delimiter_begin">&#160;(towards&#160;</string>
    <string name="towards_delimiter_end">)</string>
    <string name="towards_symbol">&#9679;</string>
    <string name="compass_label">Compass:</string>
    <string name="compass_content_description">Compass</string>
    <string name="share_menu_text">Share</string>
    <string name="help_menu_text">Help</string>
    <string name="settings_menu_text">Settings</string>
    <string name="about_menu_text">About</string>
</resources>