<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ericbt.ebtcompass.com.ericbt.ebtcompass.activities.PointsActivity">

    <group>

        <item
            android:id="@+id/find_with_compass"
            android:title="@string/points_menu_find_with_compass"
            />

        <item
            android:id="@+id/view_on_map"
            android:title="@string/points_menu_view_on_map"
            />

    </group>

    <group>

        <item
            android:id="@+id/update"
            android:title="@string/points_menu_update"
            />

        <item
            android:id="@+id/delete"
            android:title="@string/points_menu_delete"
            />

        <item
            android:id="@+id/delete_all"
            android:title="@string/points_menu_delete_all"
            />

    </group>

    <group>
        <item
            android:id="@+id/share"
            android:title="@string/share_menu_text"
            />
    </group>

</menu>
