<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ericbt.ebtcompass.com.ericbt.ebtcompass.activities.MainActivity">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share_menu_text"
        app:showAsAction="always"
        android:visible="false"
        />
    <item
        android:id="@+id/settings"
        android:title="@string/settings_menu_text"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/help"
        android:title="@string/help_menu_text"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/about"
        android:title="@string/about_menu_text"
        app:showAsAction="ifRoom|withText"
        />
</menu>
