<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.ericbt.ebtcompass.activities.GoToPointActivity"
        android:orientation="vertical"
        android:layout_margin="4dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginBottom="25sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:layout_marginTop="20sp"
                style="@style/BoldText"
                android:layout_gravity="top"
                android:textColor="?android:attr/textColorPrimary"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_weight="1"
                android:layout_marginLeft="20sp"
                android:layout_gravity="bottom"
                android:hint="@string/name_of_point_required"
                android:inputType="text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/existing_name_label"
                style="@style/BoldText"
                android:layout_gravity="center_vertical"
                android:textColor="?android:attr/textColorPrimary"
                />

            <Spinner
                android:id="@+id/existing_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20sp"
                >
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/latLong"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude_label"
                android:layout_marginTop="20sp"
                style="@style/BoldText"
                android:textColor="?android:attr/textColorPrimary"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/latitude_degrees"
                    android:inputType="number"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degree_symbol"
                    android:textColor="?android:attr/textColorPrimary"
                    />

                <EditText
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/latitude_minutes"
                    android:inputType="number"
                    android:textColor="?android:attr/textColorPrimary"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes_symbol"
                    android:textColor="?android:attr/textColorPrimary"
                    />

                <EditText
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/latitude_seconds"
                    android:inputType="number"
                    android:textColor="?android:attr/textColorPrimary"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/decimal_point"
                    />

                <EditText
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/latitude_fractional_seconds"
                    android:inputType="number"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seconds_symbol"
                    android:textColor="?android:attr/textColorPrimary"
                    />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/latitude_direction"
                    android:id="@+id/latitude_direction"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude_label"
                style="@style/BoldText"
                android:layout_marginTop="25sp"
                android:textColor="?android:attr/textColorPrimary"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <EditText
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/longitude_degrees"
                    android:inputType="number"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degree_symbol"
                    android:textColor="?android:attr/textColorPrimary"
                    />

                <EditText
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/longitude_minutes"
                    android:inputType="number"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes_symbol"
                    android:textColor="?android:attr/textColorPrimary"
                    />

                <EditText
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/longitude_seconds"
                    android:inputType="number"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/decimal_point_2"
                    android:textColor="?android:attr/textColorPrimary"
                    />

                <EditText
                    android:layout_width="50sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/longitude_fractional_seconds"
                    android:inputType="number"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seconds_symbol"
                    android:textColor="?android:attr/textColorPrimary"
                    />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/longitude_direction"
                    android:id="@+id/longitude_direction"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/utm"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude_zone_heading"
                android:layout_marginTop="20sp"
                style="@style/BoldText"
                android:textColor="?android:attr/textColorPrimary"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/longitude_zone_values"
                android:id="@+id/longitude_zone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude_zone_heading"
                android:layout_marginTop="20sp"
                style="@style/BoldText"
                android:textColor="?android:attr/textColorPrimary"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/latitude_zone_values"
                android:id="@+id/latitude_zone"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easting_label"
                android:layout_marginTop="20sp"
                style="@style/BoldText"
                android:textColor="?android:attr/textColorPrimary"
                />

            <EditText
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:id="@+id/easting"
                android:inputType="number"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/northing_label"
                android:layout_marginTop="20sp"
                style="@style/BoldText"
                android:textColor="?android:attr/textColorPrimary"
                />

            <EditText
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:id="@+id/northing"
                android:inputType="number"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altitude_label"
                android:layout_marginTop="20sp"
                style="@style/BoldText"
                android:textColor="?android:attr/textColorPrimary"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

            <EditText
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:id="@+id/altitude"
                android:inputType="number"
                />

            <TextView
                android:id="@+id/altitude_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:textSize="20sp"
                android:textColor="?android:attr/textColorPrimary"
                />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="35sp"
            android:layout_marginBottom="10sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_label"
                style="@style/BoldText"
                android:layout_gravity="center_vertical"
                android:textColor="?android:attr/textColorPrimary"
                />

            <Spinner
                android:id="@+id/color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20sp"
                >
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginBottom="25sp"
            android:layout_marginTop="25sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_line_to_label"
                style="@style/BoldText"
                android:layout_gravity="center_vertical"
                android:textColor="?android:attr/textColorPrimary"
                />

            <Spinner
                android:id="@+id/line_to"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20sp"
                >
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginTop="20sp"
            >

            <Button
                android:id="@+id/cancel"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel_button_text"
                android:layout_marginRight="10sp"
                />

            <Button
                android:id="@+id/save"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/save_button_text"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>